--- a/build.gradle
+++ b/build.gradle
@@ -62,37 +62,54 @@ loom {
 processResources {
     inputs.property "version", project.version
 
-    from (sourceSets.main.resources.srcDirs) {
-        include "fabric.mod.json"
+    filesMatching("fabric.mod.json") {
         expand "version": project.version
     }
-
-    from (sourceSets.main.resources.srcDirs) {
-        exclude "fabric.mod.json"
-    }
 }
 
-// ensure that the encoding is set to UTF-8, no matter what the system default is
-// this fixes some edge cases with special characters not displaying correctly
-// see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
-tasks.withType (JavaCompile) {
-    options.encoding = "UTF-8"
+tasks.withType(JavaCompile).configureEach {
+    // ensure that the encoding is set to UTF-8, no matter what the system default is
+    // this fixes some edge cases with special characters not displaying correctly
+    // see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
+    // If Javadoc is generated, this must be specified in that task too.
+    it.options.encoding = "UTF-8"
+
+    // The Minecraft launcher currently installs Java 8 for users, so your mod probably wants to target Java 8 too
+    // JDK 9 introduced a new way of specifying this that will make sure no newer classes or methods are used.
+    // We'll use that if it's available, but otherwise we'll use the older option.
+    def targetVersion = 8
+    // if (JavaVersion.current().isJava9Compatible()) {
+    //     it.options.release = targetVersion
+    // }
 }
 
+// java {
 // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
 // if it is present.
-// If you remove this task, sources will not be generated.
-// task sourcesJar (type: Jar, dependsOn: classes) {
-//     classifier = "sources"
-//     from sourceSets.main.allSource
+// If you remove this line, sources will not be generated.
+// withSourcesJar()
 // }
 
 jar {
-    from "LICENSE"
+    from("LICENSE") {
+        rename { "${it}_${project.archivesBaseName}"}
+    }
 }
 
 // configure the maven publication
 publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            artifact(remapJar) {
+                builtBy remapJar
+            }
+            // artifact(sourcesJar) {
+            // builtBy remapSourcesJar
+            // }
+        }
+    }
+
+
     repositories {
         maven {
             name = "GitHubPackages"
@@ -101,23 +118,6 @@ publishing {
                 username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
                 password = project.findProperty("gpr.key") ?: System.getenv("PASSWORD")
             }
-        }
-        // uncomment to publish to the local maven
-        // mavenLocal()
-    }
-
-    publications {
-        mavenJava (MavenPublication) {
-            // add all the jars that should be included when publishing to maven
-            artifact (jar) {
-                builtBy remapJar
-            }
-            artifact ("${project.buildDir.absolutePath}/libs/${archivesBaseName}-${project.version}.jar") {
-                builtBy remapJar
-            }
-            // artifact (sourcesJar) {
-            //     builtBy remapSourcesJar
-            // }
         }
     }
 }
