--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,9 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
 
+    modImplementation "com.github.andantedevs:chord:${project.chord_version}"
+    include "com.github.andantedevs:chord:${project.chord_version}"
+
     modImplementation "io.github.prospector:modmenu:${project.mod_menu_version}"
 
     modImplementation "me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}"
