--- a/gradle.properties
+++ b/gradle.properties
@@ -17,6 +17,7 @@ mod_menu_version     = 1.16.8
 
 cloth_config_version = 4.11.15
 cardinal_version     = 2.7.13
+chord_version        = 1.5.3-fabric.1.16.5
 
 okzoomer_version     = master-SNAPSHOT
 jedt_version         = 0.1
