--- a/gradle.properties
+++ b/gradle.properties
@@ -25,3 +25,4 @@ jedt_version         = 0.1
 sodium_version       = mc1.16.3-0.1.0
 lithium_version      = mc1.16.5-0.6.1
 phosphor_version     = mc1.16.2-v0.7.0
+lazydfu_version      = 0.1.2
