--- a/build.gradle
+++ b/build.gradle
@@ -55,7 +55,7 @@ dependencies {
     modRuntime "net.shadew:jedt:${project.jedt_version}"
 
     // modRuntime "com.github.jellysquid3:sodium-fabric:${project.sodium_version}"
-    modRuntime "com.github.jellysquid3:lithium-fabric:${project.lithium_version}"
+    modImplementation "com.github.jellysquid3:lithium-fabric:${project.lithium_version}"
     modRuntime "com.github.jellysquid3:phosphor-fabric:${project.phosphor_version}"
     modRuntime "com.github.astei:lazydfu:${project.lazydfu_version}"
 
