--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ org.gradle.jvmargs  = -Xmx1G
 
 # fabric properties
 minecraft_version    = 1.16.5
-yarn_build           = 5
+yarn_build           = 6
 loader_version       = 0.11.3
 
 # mod properties
@@ -11,18 +11,19 @@ maven_group          = com.cibernet.splatcraft
 archives_base_name   = splatcraft
 
 # dependencies
-fabric_api_version   = 0.32.0+1.16
+fabric_api_version   = 0.32.5+1.16
 
 mod_menu_version     = 1.16.8
 
-cloth_config_version = 4.11.15
+cloth_config_version = 4.11.18
 cardinal_version     = 2.7.13
+geckolib_version     = 1.16.5:3.0.26
 chord_version        = 1.5.4-fabric.1.16.5
 
 okzoomer_version     = master-SNAPSHOT
 jedt_version         = 0.1
 
 sodium_version       = mc1.16.3-0.1.0
-lithium_version      = mc1.16.5-0.6.1
-phosphor_version     = mc1.16.2-v0.7.0
+lithium_version      = mc1.16.5-0.6.4
+phosphor_version     = mc1.16.2-v0.7.1
 lazydfu_version      = 0.1.2
