--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
 
     // COMPATIBILITY
-    modImplementation "com.github.jellysquid3:lithium-fabric:${project.lithium_version}"
+    // ---
 
     // LIBS
     modImplementation "com.github.andantedevs:chord:${project.chord_version}"
@@ -70,6 +70,7 @@ dependencies {
     modRuntime "net.shadew:jedt:${project.jedt_version}"
 
     // modRuntime "com.github.jellysquid3:sodium-fabric:${project.sodium_version}"
+    modRuntime "com.github.jellysquid3:lithium-fabric:${project.lithium_version}"
     modRuntime "com.github.jellysquid3:phosphor-fabric:${project.phosphor_version}"
     modRuntime "com.github.astei:lazydfu:${project.lazydfu_version}"
 }
