--- a/gradle.properties
+++ b/gradle.properties
@@ -15,10 +15,11 @@ fabric_api_version   = 0.32.5+1.16
 
 mod_menu_version     = 1.16.8
 
+chord_version        = 1.5.7-fabric.1.16.5
 cloth_config_version = 4.11.18
 cardinal_version     = 2.7.13
 geckolib_version     = 1.16.5:3.0.26
-chord_version        = 1.5.7-fabric.1.16.5
+bannerpp_version     = 2.0.2+mc.1.16.3
 
 okzoomer_version     = master-SNAPSHOT
 jedt_version         = 0.1
