--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ org.gradle.jvmargs  = -Xmx1G
 
 # fabric properties
 minecraft_version    = 1.16.5
-yarn_build           = 6
+yarn_build           = 8
 loader_version       = 0.11.3
 
 # mod properties
@@ -11,13 +11,13 @@ maven_group          = com.cibernet.splatcraft
 archives_base_name   = splatcraft
 
 # dependencies
-fabric_api_version   = 0.32.9+1.16
+fabric_api_version   = 0.34.0+1.16
 
 mod_menu_version     = 1.16.9
 
-chord_version        = 1.5.7-fabric.1.16.5
+chord_version        = 1.6.0-fabric.1.16.5
 cloth_config_version = 4.11.19
-cardinal_version     = 2.8.0
+cardinal_version     = 1.16-SNAPSHOT
 geckolib_version     = 1.16.5:3.0.30
 bannerpp_version     = 2.0.2+mc.1.16.3
 
