--- a/.github/workflows/check_builds_for_errors.yml
+++ b/.github/workflows/check_builds_for_errors.yml
@@ -1,10 +1,6 @@
-# Automatically build the project and run any configured tests for every push
-# and submitted pull request. This can help catch issues that only occur on
-# certain platforms or Java versions, and provides a first line of defence
-# against bad commits.
+name: Check Builds for Errors
 
-name: build
-on: [pull_request, push]
+on: [ pull_request, push ]
 
 jobs:
   build:
@@ -17,7 +13,7 @@ jobs:
             16    # Latest version
         ]
         # and run on both Linux and Windows
-        os: [ubuntu-20.04, windows-latest]
+        os: [ ubuntu-20.04, windows-latest ]
     runs-on: ${{ matrix.os }}
     steps:
       - name: checkout repository
